# bar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/bar-audit/: Cargo.toml
crates/bar-audit/examples/: tamper_evidence.rs
crates/bar-audit/src/: lib.rs
crates/bar-bench/: Cargo.toml
crates/bar-bench/src/: lib.rs
crates/bar-config/: Cargo.toml
crates/bar-config/src/: lib.rs
crates/bar-contract/: Cargo.toml
crates/bar-contract/src/: lib.rs  ruling.rs  scope.rs
crates/bar-core/: Cargo.toml
crates/bar-core/src/: enums.rs  error.rs  ids.rs  lib.rs
crates/bar-coverage/: Cargo.toml
crates/bar-coverage/examples/: config_traceability.rs  proof_assessment.rs
crates/bar-coverage/src/: lib.rs
crates/bar-daemon/: Cargo.toml
crates/bar-daemon/src/: main.rs
crates/bar-daemon/tests/: resource_budget.rs
crates/bar-discovery/: Cargo.toml
crates/bar-discovery/src/: classify.rs  dependency.rs  lib.rs  walk.rs
crates/bar-findings/: Cargo.toml
crates/bar-findings/src/: lib.rs
crates/bar-static/: Cargo.toml
crates/bar-static/src/: lib.rs
crates/bar-store/: Cargo.toml
crates/bar-store/src/: attestation.rs  context_resolution.rs  contradiction_findings.rs  documentation_conflict_findings.rs  lib.rs  proof_obligations.rs  ruling.rs  scope_context.rs  static_facts.rs  static_findings.rs  traceability.rs
crates/bar-target/: Cargo.toml
crates/bar-target/src/: git.rs  lib.rs
docs/: spec.md  verified-agent-workflow.md
docs/phase-evidence/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
fixtures/phase-3-contract-corpus/: expected.json  operations.md  policy.md
fixtures/phase-4-resolution/: expected.json
fixtures/phase-5-static/: dispatcher.rs  expected.json  runner.py
migrations/: 0001_baseline.sql  0002_targets.sql  0003_artifacts.sql  0004_artifact_dependencies.sql  0005_contracts.sql  0006_contract_candidates.sql  0007_contract_resolution.sql  0008_scope_context_evidence.sql  0009_contract_rulings.sql  0010_scope_context_attestations.sql  0011_contract_ruling_dispositions.sql  0012_static_facts.sql  0013_proof_obligations.sql  0014_static_finding_candidates.sql  0015_proof_obligation_freshness_policy.sql  0016_static_findings.sql  0017_contradiction_findings.sql  0018_documentation_conflict_findings.sql
