[workspace]
resolver = "2"
members = [
    "crates/bar-core",
    "crates/bar-config",
    "crates/bar-audit",
    "crates/bar-store",
    "crates/bar-target",
    "crates/bar-bench",
    "crates/bar-daemon",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Bryce Worthy"]
repository = "https://github.com/primitive-0rigins/bar"
readme = "README.md"

[workspace.dependencies]
bar-core = { path = "crates/bar-core" }
bar-config = { path = "crates/bar-config" }
bar-audit = { path = "crates/bar-audit" }
bar-bench = { path = "crates/bar-bench" }
bar-target = { path = "crates/bar-target" }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
