[package]
name = "bar-config"
description = "Typed configuration contract for the Behavioral Assurance Runtime (spec Appendix C)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bar-core.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
