[package]
name = "bar-contract"
description = "Source-bound contract extraction for the Behavioral Assurance Runtime (spec §7, Phase 3)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bar-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
