[package]
name = "bar-core"
description = "Core identifiers, enums, schemas, and error types for the Behavioral Assurance Runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
