[package]
name = "bar-static"
description = "Static architecture facts for the Behavioral Assurance Runtime (spec Appendix I, Phase 5)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bar-core.workspace = true
bar-discovery.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
